deploy/kustomize/base/envoy-baseline-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-baseline-config
  namespace: reactive-mesh-authz
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_grpc
        address:
          socket_address: { address: 0.0.0.0, port_value: 8081 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              http2_protocol_options: {}
              route_config:
                name: local_route
                virtual_hosts:
                - name: grpc
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: grpc_server
                      timeout: 0s
              http_filters:
              - name: envoy.filters.http.ext_authz
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  transport_api_version: V3
                  failure_mode_allow: false
                  http_service:
                    server_uri:
                      uri: http://baseline-authz:9191
                      cluster: baseline_authz
                      timeout: 0.5s
                    path_prefix: /authorize
                    authorization_request:
                      allowed_headers:
                        patterns:
                        - exact: x-sub
                        - exact: x-sid
                        - exact: x-jti
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: grpc_server
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: grpc_server
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: grpc-server, port_value: 50051 }
      - name: baseline_authz
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: baseline_authz
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: baseline-authz, port_value: 9191 }
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
