deploy/kustomize/base/envoy-reactive-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-reactive-config
  namespace: reactive-mesh-authz
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_grpc
        address:
          socket_address: { address: 0.0.0.0, port_value: 8081 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              http2_protocol_options: {}
              route_config:
                name: local_route
                virtual_hosts:
                - name: grpc
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: grpc_server
                      timeout: 0s
              http_filters:
              - name: reactive_pep
                typed_config:
                  "@type": type.googleapis.com/google.protobuf.Struct
                  value:
                    redis_host: "redis"
                    redis_port: 6379
                    redis_channel: "auth_events"
                    subject_header: "x-sub"
                    session_header: "x-sid"
                    token_header: "x-jti"
                    block_status: 403
                    log_events: true
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: grpc_server
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: grpc_server
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: grpc-server, port_value: 50051 }
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
