deploy/kustomize/base/envoy-reactive.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-reactive
  namespace: reactive-mesh-authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-reactive
  template:
    metadata:
      labels:
        app: envoy-reactive
    spec:
      containers:
        - name: envoy
          image: reactive-mesh/envoy-reactive:dev
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/envoy"]
          args: ["-c", "/etc/envoy/envoy.yaml", "--log-level", "info"]
          ports:
            - containerPort: 8081
            - containerPort: 9901
          volumeMounts:
            - name: config
              mountPath: /etc/envoy
      volumes:
        - name: config
          configMap:
            name: envoy-reactive-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-reactive
  namespace: reactive-mesh-authz
spec:
  type: NodePort
  selector:
    app: envoy-reactive
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
      nodePort: 30081
    - name: admin
      port: 9901
      targetPort: 9901
      nodePort: 30901
