deploy/kustomize/base/grpc-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
  namespace: reactive-mesh-authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
        - name: grpc-server
          image: reactive-mesh/grpc-server:dev
          imagePullPolicy: IfNotPresent
          env:
            - name: LISTEN_ADDR
              value: 0.0.0.0:50051
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: reactive-mesh-authz
spec:
  selector:
    app: grpc-server
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
